# Robotics2_final_project

./: .gitignore  README.md
docs/: system_diagram.dot
scripts/: run_build.sh  run_gazebo_gui.sh  run_gazebo_headless.sh  send_start_flight.sh
src/multi_aerial_gazebo/: CMakeLists.txt  package.xml
src/multi_aerial_gazebo/controller/: controller.py  drone.py  main.py  plot_trajectories.py  renderer.py  simulator.py
src/multi_aerial_gazebo/launch/: three_aerial_gazebo.launch.py
src/multi_aerial_gazebo/scripts/: multi_robot_pid_controller.py  multi_robot_state_interface.py
src/multi_aerial_gazebo/urdf/: aerial_robot.urdf
src/multi_aerial_gazebo/worlds/: three_aerial.world
